--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "dev": "npx nodemon",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -35,6 +37,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "eslint": "^8.37.0",
+    "jest": "^29.5.0",
     "jest-cucumber": "^3.0.1"
   }
 }
