--- a/.github/workflows/a3.yml
+++ b/.github/workflows/a3.yml
@@ -1,13 +1,19 @@
 name: CI
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - master
+    paths:
+      - '../../src/index.ts'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
     - name: Use Node.js 14.x
       uses: actions/setup-node@v2
@@ -23,5 +29,15 @@ jobs:
     - name: Test
       run: yarn test
 
-    - name: Build
-      run: yarn build
+    - name: Build Docker image
+      uses: docker/build-push-action@v4.0.0
+      with:
+        context: .
+        push: true
+        tags: mouayad04/typescript-starter:1.0.0
+        build-args: |
+          NODE_ENV=production
+        if: success()
+
+    - name: Verify Docker image
+      run: docker run --rm mouayad04/typescript-starter:1.0.0 npm run test
