--- a/.github/workflows/a3.yml
+++ b/.github/workflows/a3.yml
@@ -1,27 +1,22 @@
-name: CI
-
-on: [push]
-
+name: CD Pipeline
+on:
+  pull_request:
+    branches:
+      - master
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  Lint-Test-Build-Application:
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
-
-    - name: Install dependencies
-      run: yarn install
-
-    - name: Lint
-      run: yarn lint
-
-    - name: Test
-      run: yarn test
-
-    - name: Build
-      run: yarn build
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: mouayad04typescript-starter:1.0.0
