--- a/.github/workflows/a5.yml
+++ b/.github/workflows/a5.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v3
+      - name: Build and push Docker images
+          uses: docker/build-push-action@v4.0.0
         with:
           context: .
           push: true
