--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npx nodemon",
     "start": "node build/index.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "express": "express"
   },
   "husky": {
     "hooks": {
@@ -19,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.6.1",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -38,6 +40,7 @@
   },
   "dependencies": {
     "eslint": "^8.37.0",
+    "express": "^4.18.2",
     "jest": "^29.5.0",
     "jest-cucumber": "^3.0.1"
   }
