--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.6.1",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint-config-prettier": "^8.5.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.37.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
-    "jest-cucumber": "^3.0.1"
+    "jest-cucumber": "^3.0.1",
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
