--- a/.github/workflows/CI-Pipeline.yml
+++ b/.github/workflows/CI-Pipeline.yml
@@ -10,8 +10,8 @@ jobs:
       - name: 🔍️ Check out repository code
         uses: actions/checkout@v3
 
-      - name: ⬇️ Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+     # - name: ⬇️ Set up Docker Buildx
+      #  uses: docker/setup-buildx-action@v2
 
       - name: 🏗️ Build Docker image
         uses: docker/build-push-action@v4.0.0
